2005-10-18:
	* src/options.c,src/options.h: parse the "existing_ticket" option
	(patch from Nathan Huff).
	* src/pam_krb5.5.in,src/pam_krb5.8.in: update.
	* src/v5.c: if the "existing_ticket" option is used, attempt to read
	the TGT cred from the default ccache, and accept that as sufficient
	for successful authentication (patch from Nathan Huff).
	* src/auth.c: if the "existing_ticket" option is used, call to get
	creds before prompting for a password (patch from Nathan Huff).
	
2005-10-18:
	* src/acct.c: remove an unused variable to silence a compile warning.
	* src/harness.c: check the result of fgets().
	* src/minikafs.c: comment out minikafs_unpag(), which was static and
	unused, to silence a compile warning.
	* src/tokens.c: check for errors from readlink().

2005-10-13:
	* configure.ac: clean up logic for setting pkgsecuritydir correctly if
	a libdir isn't passed to configure (Greg Wettstein).

2005-10-06:
	* src/afs5log.c: recognize that "--" means "no more options".

2005-10-06:
	* autogen: use RPM's optflags for CFLAGS, if available.
	* src/afs5log.c: don't autolog to the local cell if the '-p' flag was
	given on the command line.
	* src/minikafs.c,src/pagsh.c: implement an unpag() call, then check
	and find out that it's the same as unlog(), so comment it out.

2005-10-06:
	* src/options.c: make "tokens" an option which can also take a list of
	service names for which it should be enabled.
	* src/pam_krb5.5.in,src/pam_krb5.8.in: update section for "tokens".
	* src/pam_krb5.5.in: fix header text for "external" and "use_shmem".

2005-10-05:
	* configure.ac: prereq the version of autoconf which my development
	box has, to avoid possible AC_CONFIG_HEADER/AM_CONFIG_HEADER wackiness.
	* src/pam_krb5_storetmp.8.in: use the actual installation paths.
	* src/acct.c: list the actual result code in the debug message.

2005-10-05:
	clean up CVS version tags
	* README.winbind: clear up a couple of finer points.